表記ゆれ修正

--- a/hardproblem/5-01.html
+++ b/hardproblem/5-01.html
@@ -18,14 +18,13 @@
 </div>
 
 <div class="text">
-
-　時刻は昼の11時過ぎ。
+　時刻は昼の十一時過ぎ。
 　数時間前まで力なく赤らんでいた太陽はすっかり高くに登ってしまい、わずかばかりの暖かさを含んだ陽光が街全体を明るく照らしだす。そんな日差しのなかで上空を眺めてみれば、そこにあるのは寒々しい枯れ木とその向こうに広がる薄水色の空。北風に吹かれてなおその場に留まろうとする一筋の巻雲が、さながら空に刻まれた傷跡のように浮かぶ、そんな冬の空だった。
-　通勤・通学の時間帯も過ぎてしまった今、真揺ニュータウンはひっそりとした静寂に包まれている。時折車の走るエンジン音や、主婦が布団を叩く音、あるいは掃除機の排気音だけが、いまこの街を支配するすべてだ。
-　そしてここ、漸新台2丁目にある単身者用アパートの一室もまた静寂に沈んでいる。
+　通勤・通学の時間帯も過ぎてしまった今、<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンはひっそりとした静寂に包まれている。時折車の走るエンジン音や、主婦が布団を叩く音、あるいは掃除機の排気音だけが、いまこの街を支配するすべてだ。
+　そしてここ、漸新台二丁目にある単身者用アパートの一室もまた静寂に沈んでいる。
 　音のない六畳の部屋。だがこことて完全な無音ではない。耳を澄ませばペンが紙を擦る音や本をパラパラとめくる音、そして微かな呼吸音が聞こえてくる。
 「…………」
-　音の主である少女――リコは真剣な表情で数式と向かい合っていた。机の上に開いているのは高等数学の問題集。1ヶ月ほど前に買ってもらったものである。少女は書かれた問題文を眉一つ動かさずにゆっくりと読み込んでは、覚束ない調子でノートに数式を書き連ねていく。
+　音の主である少女――リコは真剣な表情で数式と向かい合っていた。机の上に開いているのは高等数学の問題集。一ヶ月ほど前に買ってもらったものである。少女は書かれた問題文を眉一つ動かさずにゆっくりと読み込んでは、覚束ない調子でノートに数式を書き連ねていく。
 「……あれ？」
 　どう見てもおかしい計算結果がはじき出され、その整った顔立ちが少しだけ曇る。だが少女はめげる様子などつゆとも見せず、自らの記した計算過程を頭からつぶさに<ruby>検算<rp>《</rp><rt>チェック</rt><rp>》</rp></ruby>していく。
 　ここ数日、リコはずっとこんな様子だった。
