--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -17,7 +17,7 @@
 　案の定、すべてが終わったのは夜の八時を過ぎてからだった。
 　実験装置のセッティングを終え、サンプル作成に使った道具を片付ける。明日は朝から晩まで実験だ。いつもより早く学校に来て、いつもより遅く帰らねばならない。そしてその実験が終われば次はデータの解析。これも数日間大学に通い詰めなければならない作業である。いくら計算機で行う作業とはいえ研究室に備え付けられたスーパーコンピュータを使う必要があるために、自宅のラップトップで同じことを行うだなんて横着はできないのだ。
 「解析っていつ頃から始めるんですかね……？」
-　希海は実験室のデスクに置かれたノートに記入をしながら、共同実験者である先輩に聴いてみた。なぜそんな質問をするのか。その答えは明白だ。すでに大晦日まで一週間を切っており、明後日は12月の最後の金曜である。世の中高生はすでに冬休みに入っているし、世間は明後日で仕事納めのところも多いだろう。……と来れば当然、数日かかる実験データの解析は年明け以降になる。来年の初登校日はしっかりと確認しておいた方がいいだろう。そんな殊勝な心掛けをアピールしてみたつもりだったが、
+　希海は実験室のデスクに置かれたノートに記入をしながら、共同実験者である先輩に聴いてみた。なぜそんな質問をするのか。その答えは明白だ。すでに大晦日まで一週間を切っており、明後日は十二月の最後の金曜である。世の中高生はすでに冬休みに入っているし、世間は明後日で仕事納めのところも多いだろう。……と来れば当然、数日かかる実験データの解析は年明け以降になる。来年の初登校日はしっかりと確認しておいた方がいいだろう。そんな殊勝な心掛けをアピールしてみたつもりだったが、
 「は？　実験の次の日、つまり明後日に決まってるだろ」
 　何言ってんだこいつ、と言わんばかりの声色に希海はたじろぐ。
 「え、えっと……い、いやでも世間では明後日から年末休みですよね。流石に年末くらいは……」
@@ -29,7 +29,7 @@
 　先輩はそう言って希海に背中を見せると、扉を開いて廊下へ消えてしまった。鞄を肩に掛けていたから恐らくそのまま帰ったのだろう。
 「…………はぁ」
 　バタン、と扉が閉じられると同時にもう何度目か分からない溜息。なんとなくそんな気はしていたが、やっぱり年末年始も通い詰めか……。そう思うとすでに重かった気持ちが一層その重量を増した気がした。
-――お前さ、何なめたこと言ってんの？
+　――お前さ、何なめたこと言ってんの？
 　先輩の声が頭をリフレインし軽い吐き気を覚えながらもなんとか実験ノートを完成させる。最後の方は至ってはかなり適当だが、もうどうでもいい。年末年始すら休ませてもらえないことが分かった以上、今日はもうさっさと帰りたかった。
 　ペンを置いてノートを閉じ、実験室の電気を消せば本日の業務は終了である。後は学生部屋に荷物を取りに行って、そのまま家へ帰るだけ。
 　希海が廊下に出ると、センサ式のライトが端から順に点灯していき圧迫感のあるグレーの壁が光の下に現れた。希海は実験室に鍵を掛けるとそのまま廊下を突き進み、数メートルほど先にある学生部屋の扉に手をかけ、
@@ -104,8 +104,7 @@
 　あまりに唐突だった。
 　思い出した。何を？
 　唐突すぎてこんな短い文章ですら咀嚼するのに時間がかかってしまう。
-　昔のことを。むかし？　いつのこと？　
-　それは――
+　昔のことを。むかし？　いつのこと？　それは――
 「う……嘘……」
 　理解が遅れてやってくると、腹の奥がまるで氷を詰められたように温度を失っていく。だがリコはそんな希海を待ってはくれず、突然立ち上がって希海に詰め寄ってくる。
 「ホントです！　私思い出したんです！　自分が誰で……自分が何をしていたのか……。どうしてあの時あそこに居て……、あのとき何をしようとしていたのか。全部……全部を思い出したんです！」
@@ -113,10 +112,10 @@
 　そういえばリコは――いや当時はまだ名前すら授けていなかった――あのとき出会ったロボットの少女は、確かに階段の踊り場で言っていた。自分には、やらなければならない事がある、と。
 「希海さん！　お願いです！　私を<ruby>天分<rp>《</rp><rt>てんぶ</rt><rp>》</rp></ruby>市まで連れて行って下さい！」
 「ちょっ、ちょっと……」
-「私はそこまでの行き方は分かりませんけど……。その天分市の……前に住んでた町の、<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>っていう駅に行けばそこから先は分かるんです！　だからお願いします！」
+「私はそこまでの行き方は分かりませんけど……。その<ruby>天分<rp>《</rp><rt>てんぶ</rt><rp>》</rp></ruby>市の……前に住んでた町の、<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>っていう駅に行けばそこから先は分かるんです！　だからお願いします！」
 「ちょ、ちょっと待って！　落ち着いてよ！」
 　顔と顔が触れそうなほどの距離にまで近づいていたリコを強引に引き離す。
-「確かに天分市まではこっからだとそう遠くはないけどさ……。そもそも、そこに何があるの？　前に住んでた場所だって言うけど、そこに行って一体何をするつもりなの？　その『やらなきゃいけないこと』って、なんなのよ？」
+「確かに<ruby>天分<rp>《</rp><rt>てんぶ</rt><rp>》</rp></ruby>市まではこっからだとそう遠くはないけどさ……。そもそも、そこに何があるの？　前に住んでた場所だって言うけど、そこに行って一体何をするつもりなの？　その『やらなきゃいけないこと』って、なんなのよ？」
 「そ、それは…………」
 　希海がそう問いただすとリコは俯き、言いにくそうに言葉を濁した。
 「……ちょっとリコ落ち着こう。リコにどういう事情があって、何をしなきゃいけないのかは分からないけど……。それって今すぐじゃないと駄目なことなの？」
