--- a/hardproblem/5-05.html
+++ b/hardproblem/5-05.html
@@ -17,7 +17,7 @@
 　当日は朝七時に家を出た。
 　想定していたのよりもずいぶんと早い。すっかり早起きが板についてしまったのもそうだが、リコとふたりで部屋にいると息が詰まりそうだったからだ。
 　朝食だってとってない。そもそもリコが炊事をできるような状態ではなかったし、一切の言葉がないままに無言で箸を動かす自分の姿を想像すると食べずに出て正解だったと希海は思う。
-『まもなく6号線に快速<ruby>飾磨<rp>《</rp><rt>しかま</rt><rp>》</rp></ruby>行きが到着します』
+『まもなく六号線に快速<ruby>飾磨<rp>《</rp><rt>しかま</rt><rp>》</rp></ruby>行きが到着します』
 　そしてふたりは今、郊鉄の<ruby>御園<rp>《</rp><rt>みその</rt><rp>》</rp></ruby>駅で西行きの電車を待っている。すでにラッシュ時のピークを過ぎたとはいえ、平日の鉄道駅には沢山の人が行き交っていた。スーツを着たサラリーマンや気だるそうな様子で電車を待つ大学生、必死に単語帳とにらめっこする予備校生の姿もある。だがそんな往来の多さにも関わらず、言葉を交わす人間はごくわずかだ。誰もがプラットホームに響く足音に身を委ね、ただ無言で電車を待ち続ける一般的な平日朝の光景。そんなどこか異様でもある静けさをかき消すかのように、列車がレールのジョイント音を鳴らせて入線してくる。
 　車輪が嫌な軋みを響かせる中、希海はちらりと横に立った少女の様子を窺ってみる。くりっとした双眸が焦点を結ぶ場所はどこか遠い。
 　電車が止まり扉が開いた。
@@ -52,7 +52,7 @@
 「そう言えば……ちゃんと話してませんでしたね……」
 　だが二度の沈黙がふたりの間に横たわることはなかった。少女は自嘲の混じる、何かを諦めたような笑顔を窓の外に向ける。
 「少し長くなるかも知れません……。それでも……聞いてくれますか？」
-　希海はその場に突っ立ったままこくりと首を縦に振った。電車の窓から光が差し込んでくる。どうやら地下区間を抜けたようだ。目的の駅まではあと10分程度。
+　希海はその場に突っ立ったままこくりと首を縦に振った。電車の窓から光が差し込んでくる。どうやら地下区間を抜けたようだ。目的の駅まではあと十分程度。
 　ふたりが向き合うべき事実は確実にそこまで迫ってきている。
 </div>
 
