--- a/hardproblem/5-06.html
+++ b/hardproblem/5-06.html
@@ -14,11 +14,11 @@
 
   <div class="contents">
 <div class="text">
-　私が目を覚ましたのは、静かな雨の続く梅雨の頃でした。生まれた直後のことはよく覚えていません。ただ、気付いたらSDRの研修室にいて、自分が誰で何をしなきゃいけないかってことだけは分かっていて……。
+　私が目を覚ましたのは、静かな雨の続く梅雨の頃でした。生まれた直後のことはよく覚えていません。ただ、気付いたらＳＤＲの研修室にいて、自分が誰で何をしなきゃいけないかってことだけは分かっていて……。
 　その後の一ヶ月間はずっと研修。簡単な仕事のやり方とか、人との付き合い方とか、言葉遣いとか私自身の扱いに関する注意点とか。そういうことを教えてもらいながらちゃんと仕事ができるかどうかを見られるんです。そしてインストラクターさんが『これでいい』って思ったらオーナーの人と面会。
 　私が初めてあの人に……真也さんに会ったのもそのときです。どんな人なんだろうとか、怖い人だったら嫌だなとか、上手く働けるかなとか……。会う前はそんなことを思ってたんですけど、でもそんな不安はあの人を見たらどこかへ飛んでいってしまいました。
-　だって、あの人すごく緊張してたんですよ。私と話してる最中ずっと落ち着かなくて、あっちを見たりこっちを見たり。見てるこっちが心配になるくらい。最後に「ふつつかものですが、よろしくお願いします」なんて自己紹介されたときなんて私、少し笑っちゃって……。それで何というか、私がこの人をしっかり支えていかないとなって、そう思ったんです。
-　それから数ヶ月間……夏の間は本当に幸せでした。まだ私も家事とかお料理とかちゃんとできなくて、色々迷惑かけてしまったんですけど、それでも「毎日ありがとう」って言って、色んなこと教えてくれて……。そんな真也さんだって毎晩仕事で遅かったんですけど、それでも10時までには帰ってきてくれましたし、週末には色んなとこへ出かけたりできました。
+　だって、あの人すごく緊張してたんですよ。私と話してる最中ずっと落ち着かなくて、あっちを見たりこっちを見たり。見てるこっちが心配になるくらい。最後に『ふつつかものですが、よろしくお願いします』なんて自己紹介されたときなんて私、少し笑っちゃって……。それで何というか、私がこの人をしっかり支えていかないとなって、そう思ったんです。
+　それから数ヶ月間……夏の間は本当に幸せでした。まだ私も家事とかお料理とかちゃんとできなくて、色々迷惑かけてしまったんですけど、それでも「毎日ありがとう」って言って、色んなこと教えてくれて……。そんな真也さんだって毎晩仕事で遅かったんですけど、それでも十時までには帰ってきてくれましたし、週末には色んなとこへ出かけたりできました。
 
 「出かけたって……どこに？」
 　階段を降りながら希海が振り返った。薄暗い駅舎を抜けると、冬の寒々しい曇り空がふたりを出迎える。
@@ -136,7 +136,7 @@
 「私は多分、まだ真也さんが死んでしまったことが、もう二度と帰ってこないことが信じられなかったんです。馬鹿みたいですよね……。心のどこかではあの人はまだ完全に死んでなくて、胸ポケットにはさまってた紙を開くと、真也さんの生き返らせ方が書いてあって……それをやればまた元通りの生活を送れる。また真也さんの温かさを感じることができる。そんなありもしない妄想に突き動かされてたんだと思います。でも、そんな私の……頭の狂ったような期待は、次の瞬間に打ち砕かれました。
 　手紙には……ただ一言、『もう頑張れない』って、そう書いてたんです。
 　私……その前の日に、真也さんに『頑張ってください』って言ってて……。ううん。前日だけじゃない。その前の日も、前の前の日も、真也さんは『疲れた』って『もういやだ』って言ってたのに……、そのたびに私は……『真也さんならできますよ』とか『勇気を出してください』とか……軽薄な言葉を投げかけてしまって……。だから……私が全部悪いんです。私が真也さんを殺してしまったんです。そしてそのことを誰かに知られるのが怖かったから……。自分が人殺しだって知られるのが怖かったから……。私は剥がれかけてた壁板の裏に遺書を隠したんです。自分のやったことを隠して、『いい子』のままで死のうって、そう思ったんです。でも……。
-　でも、冷たくなった真也さんの手を握ってみて、もうとっくに失われてしまった温かさを思い出そうとするたびに、疑念が私の頭をよぎるんです。『本当にこれでいいのか』って。けれど実際にお父さんやお母さんや、SDRの人に連絡をすることを想像すると怖くて、とっても怖くて……体がぴくりとも動いてくれなくて……結局私は何もできずにそのまま眠ってしまって……。
+　でも、冷たくなった真也さんの手を握ってみて、もうとっくに失われてしまった温かさを思い出そうとするたびに、疑念が私の頭をよぎるんです。『本当にこれでいいのか』って。けれど実際にお父さんやお母さんや、ＳＤＲの人に連絡をすることを想像すると怖くて、とっても怖くて……体がぴくりとも動いてくれなくて……結局私は何もできずにそのまま眠ってしまって……。
 　次に目が覚めたとき……真っ先に浮かんだのは遺書のことでした。『助かった』とかそんなことを考えることも忘れて、お父さんとお母さんに遺書を渡さなきゃって、真也さんのことを正直に全部話さなきゃって、ただ何かに突き動かされるように知らない街を歩きまわって、そして……」
 　これから先の話は希海だって嫌というほどに知っている。
 　いや、本当に知っているのだろうか？　リコと出会ったあのとき、この子が何をしようとしていたのか、一体何に突き動かされていたのか。虹を閉じ込めたあの瞳が見据えていた先のことを、自分は何一つ知らなかったではないか。リコの……ハルカの背負ってたものの重さを見ぬままに事実をひた隠し、ただ脳天気に日常を過ごしていたこの数ヶ月間。そんな自分自身の軽薄さに思いを馳せると今にも胃が逆流しそうだった。
