--- a/hardproblem/5-07.html
+++ b/hardproblem/5-07.html
@@ -23,7 +23,7 @@
 『とにかく今から急いでそっちへ向かうから、そのあいだ青山君はリコから目を離さないでくれ』
 　東の言葉に誘導されるように希海は背後を振り返る。その視線の先には背の高いコンクリート製の護岸と、その下に座り込んで膝をかかえるひとりの少女。
 　あの後、むせび泣くリコを必死でなだめた。
-　「元気だして」とか「とりあえず立って」とか、思いつく限りの言葉で励ましてみたものの、膝をついたままの少女はそんな軽薄な言葉には一向に耳を傾けようとはしなかった。結局むりやりに手を引いてリコを立ち上がらせ、ふたりはこうして駅前の浜辺にやってきている。
+　『元気だして』とか『とりあえず立って』とか、思いつく限りの言葉で励ましてみたものの、膝をついたままの少女はそんな軽薄な言葉には一向に耳を傾けようとはしなかった。結局むりやりに手を引いてリコを立ち上がらせ、ふたりはこうして駅前の浜辺にやってきている。
 『――ああ、一時間かそこらで着くと思う。じゃあ、また』
 　東はそう告げると一方的に受話器を置いた。ブツリというノイズとビープ音が短く響き、同時にスピーカーの向こうから気配が消える。希海は携帯端末をコートのポケットにしまうと、重い足取りでリコの方に戻っていった。
 　砂を踏みしめてリコの傍に立つと、そのつむじに希海の影が暗く差し込んだ。だが座り込んだままの少女はまるでこちら存在に気付いていないかのように身動きひとつ取ろうとしない。
@@ -42,9 +42,9 @@
 　ちらりと横をうかがう。
 　座り込んだままのリコはもうずっと微動だにせず、まるで人形のようだった。鼻をすする音と擬似呼吸に合わせてゆっくりと上下する肩が、辛うじて少女が活動状態にあることを示している。
 　そんな少女の膝小僧。痛々しく擦りむいた傷口から一滴の赤い液体が滴った。血液……ではない。アンドロイドは生体活動に酸素を必要としないし、ましてや摂取した栄養を全身の細胞に送り出す必要もない。
-　その赤黒い液体が交換するのはガスや栄養分ではなく熱である。FIANCから生じる熱を全身にくまなく輸送し、ニューラルプロセッサを冷却すると同時に排熱を利用して肌の温かさを再現するための<ruby>末端熱交換液<rp>《</rp><rt>T - H E L</rt><rp>》</rp></ruby>。赤黒い色をしているのは人間の静脈血を模倣した単なるフェイクにすぎない。
+　その赤黒い液体が交換するのはガスや栄養分ではなく熱である。<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>から生じる熱を全身にくまなく輸送し、ニューラルプロセッサを冷却すると同時に排熱を利用して肌の温かさを再現するための<ruby>末端熱交換液<rp>《</rp><rt>Ｔ　－　Ｈ　Ｅ　Ｌ</rt><rp>》</rp></ruby>。赤黒い色をしているのは人間の静脈血を模倣した単なるフェイクにすぎない。
 　希海ははたと思い立ち、ポケットからハンカチを取り出した。
-　この擬似血液は空気に触れて固化する性質があるものの、その下の破れてしまった皮膚が自然治癒することはない。つまりかさぶたは形成されるが、何かの拍子にそれが剥がれてしまえば再び血が流れ落ちる。そして擬似血液を失うということはFIANCの排熱機構が働かなくなるということであり、その行き着く先が脳死であることを希海は嫌というほど理解していた。
+　この擬似血液は空気に触れて固化する性質があるものの、その下の破れてしまった皮膚が自然治癒することはない。つまりかさぶたは形成されるが、何かの拍子にそれが剥がれてしまえば再び血が流れ落ちる。そして擬似血液を失うということはＦＩＡＮＣの排熱機構が働かなくなるということであり、その行き着く先が脳死であることを希海は嫌というほど理解していた。
 　とは言え小さな傷である。たとえこのまま熱交換液を垂れ流したとしても、排熱機能に障害をきたすまでは数十日単位の猶予があるだろう。だが、たとえ小さな傷であっても擬似血液が外部に流出してしまった場合は速やかにサポートセンターに連絡を入れるように東から言われているし、何より傷口から砂埃が入るのは予期せぬ不具合の原因になりかねなかった。
 「…………」
 　ハンカチを手にした手が止まる。
@@ -57,7 +57,7 @@
 　不意を付かれた希海は間抜けな表情で聞き返すが、対する少女はそれに答えようとしない。
 「そ、それよりさ。リコそのケガ。ハンカチ巻いてあげるから膝を――」
 「私の記憶のことです」
-　低く鋭い、怒りと苛立ちの混ざったリコの声。その声色が指し示す<ruby>意味合い<rp>《</rp><rt>サ イ ン</rt><rp>》</rp></ruby>は……非難である。
+　低く鋭い、怒りと苛立ちの混ざったリコの声。その声色が指し示す<ruby>意味合い<rp>《</rp><rt>サ　イ　ン</rt><rp>》</rp></ruby>は……非難である。
 「ご、ごめん……。で、でもそれはリコの――」
 「私のため……ですか。私はそんなこと……頼んでないです。私が昔のこと知りたがってるって、希海さんだって分かって……ましたよね。私が望んでないって知っておきながら事実を隠してそれで……、それでどうなったんですか。それは本当に私のためだったんですか」
 　リコの言葉が鋭い刃となって希海を切り刻む。希海は何も答えられなかった。
@@ -85,7 +85,7 @@
 　希海は乱暴に携帯端末を取り出すと立ち止まって液晶パネルの表示に目を落とす。発信者は、東だった。
 　希海は眉を潜めて舌打ちをする。
 　今更一体何の用だ。まだ何か言うことがあるのか。だが残念だったな。お前がさっさと来ないから、もうすべては手遅れだ。自分は二度とリコの元へ行かない。向こうが謝るまで、絶対に許さない。
-　希海は反射的に着信拒否のボタンへと手を伸ばした。もう東に話すことなど何もない。リコの居場所はGPSでも何でも使って勝手に調べればいい。そう思った。
+　希海は反射的に着信拒否のボタンへと手を伸ばした。もう東に話すことなど何もない。リコの居場所はＧＰＳでも何でも使って勝手に調べればいい。そう思った。
 　だが携帯端末をポケットにしまい込むや否や、その小さな機械は再びけたたましい着信音を周囲に鳴り響かせる。発信者は……やはり東。りんりんと耳障りなベルの音が希海の頭をかき乱し、収まりかけていた苛立ちに油を注ぐ。
 　うるさい。
 　うるさいうるさい。
@@ -105,7 +105,7 @@
 　星の見えない市街地の空と、線路越しに見えるプラットフォームの煌々とした明かり。駅舎の出入口からは沢山の人が足早に出てくる。ちょうど電車が着いたのだろう。スーツ姿のサラリーマンを見て、そういえば今日が平日であることを思い出す。
 　さっさと帰ろう。
 　そう思った。世間は今日で仕事納めかもしれないが、自分は明日も明後日もその次の日もずっと大学へ行かなければならない。実験データの解析だってまだだし、ぼちぼち卒論の執筆にだって着手する必要がある。
-　そして希海は、家路を急ぐ人混みをかき分けながら、とぼとぼとした足取りで駅へと向かった。階段を登ってコンコースを歩き、低い天井の下に立ち並ぶ何本ものICカード読取機に財布をかざす。プラットフォームまで降りて時刻を確認すると、次の電車がやってくるまであと一分もなかった。
+　そして希海は、家路を急ぐ人混みをかき分けながら、とぼとぼとした足取りで駅へと向かった。階段を登ってコンコースを歩き、低い天井の下に立ち並ぶ何本ものＩＣカード読取機に財布をかざす。プラットフォームまで降りて時刻を確認すると、次の電車がやってくるまであと一分もなかった。
 　しばらくのあいだ電車を待っていると、ふいに隣の国道から車の行き来が途絶えた。エンジン音が聞こえなくなると、その向こうに潜んでいたかすかな波の音が希海の耳に飛び込んでくる。その音は穏やかで、もう何度も聞いたはずなのにどこか懐かしく響く。目をつぶれば眼前に青い夏の海が見えるような気がした。
 　駅の校内放送が列車の接近を告げ、やがて電車がレールを軋ませながら駅に入線してくる。レールとフランジが擦れる金属音に波の音がかき消されてしまってもなお、そのリズムはまだ希海の耳にこびりついたままだ。
 　まぶたをの裏側に見える青い空と白い砂浜。突然会ってしまった竹見さんと、口の中の酸の味。寄せては返す波のリズム。花がらのワンピース水着を来た誰か。
