--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -19,15 +19,15 @@
 『閉律症は発症からの時間経過でその治癒率が変わって、発症から72時間を過ぎれば自分には手が出なくなる』
 『こんな年の瀬にアンドロイド相手のルーミングを受け持ってくれる人間が見つかるのか』
 『それに家族や友人に対するルーミングの場合、赤の他人よりも治癒率が高いという統計データがある』
-　嘘は言ってない。だが最後の部分は少し卑怯だった。確かに患者と近しい間柄にある人物によるルーミングは治癒率が高い。だが問題はそれが失敗したとき、すなわち説得が上手く行かずにこじれてしまった場合のことだ。近親者によるルーミングが失敗した場合、統計によると2回目以降の成功率は通常時の半分以下にまで落ち込んでしまう。
+　嘘は言ってない。だが最後の部分は少し卑怯だった。確かに患者と近しい間柄にある人物によるルーミングは治癒率が高い。だが問題はそれが失敗したとき、すなわち説得が上手く行かずにこじれてしまった場合のことだ。近親者によるルーミングが失敗した場合、統計によると二回目以降の成功率は通常時の半分以下にまで落ち込んでしまう。
 　だから、自分には後がない。
 　希海は手に持った数粒の糖衣錠を口に入れると、そう自身に言い聞かせ水で流し込んだ。残った水で口をゆすぎ、ついでに廊下にあった洗面台で顔も洗う。タオルで顔を拭き真っ白な洗面台に備え付けられた鏡に向き合うと、まだ少しだけ赤らんでいる目が見えた。
 　みっともない顔だった。
-　あの後、動転して泣きじゃくる希海を東は冷静になだめると、倒れたリコを車に乗せてSDRのサポートセンターへと戻ってきた。そしてその車中、自分のやってしまったことを帳消しにしたい一心で希海は東にこう提案したのだ。
+　あの後、動転して泣きじゃくる希海を東は冷静になだめると、倒れたリコを車に乗せてＳＤＲのサポートセンターへと戻ってきた。そしてその車中、自分のやってしまったことを帳消しにしたい一心で希海は東にこう提案したのだ。
 　自分にリコのルーミングをやらせてくれ、と。
 　もちろん東は簡単に応諾しなかった。希海との関係のこじれがそもそもの原因である以上、その希海が再びリコの元を訪れたところで事態が悪化する可能性だってある。だが閉律症の治療は時間との戦いである以上、すぐにでもルーミングを始められる希海のアドバンテージは絶大で、それを分かっていたからこそ東も渋々と認めたのだろう。
-　そして希海は今、再びSDRのルーミング室に立っている。
-　前にここを訪れたのはほんの2ヶ月前。小春のルーミングを買って出たときのことだ。まさかこんな短期間でこの場所へ戻ってくるだなんて思いもよらなかった。しかもその患者は……。
+　そして希海は今、再びＳＤＲのルーミング室に立っている。
+　前にここを訪れたのはほんの二ヶ月前。小春のルーミングを買って出たときのことだ。まさかこんな短期間でこの場所へ戻ってくるだなんて思いもよらなかった。しかもその患者は……。
 「…………」
 　リコの安らかな寝顔が頭をよぎる。
 「私が……ちゃんと言わないと」
@@ -49,7 +49,7 @@
 　反射的に飛び起きた希海だったが、続く言葉が出てこない。少女の瞳の奥に揺らめく虹を見た瞬間、それまで考えていたセリフはすべてどこかへ消え去ってしまっていた。
 「何をしに……来たんですか」
 　次に口を開いたのはリコだった。
-　何をしに来たのか。その言葉に、つい数時間ほど前の光景が頭をよぎる。呼び鈴を押そうとして力なく降りていった右手。擦りむいた膝から滴る赤黒い<ruby>末端熱交換液<rp>《</rp><rt>T - H E L</rt><rp>》</rp></ruby>と、何も言わないリコ。怒鳴り散らしてしまった自分と、そんなリコを置いてどこかへ行ってしまった自分。思い出すだけで内蔵がかき乱され、今にもえずきそうになる。足が震えだし、ここから逃げ出せと声高に叫ぶ。さっさと帰ろうと、もうこんなストレスはこりごりだと叫び散らす。
+　何をしに来たのか。その言葉に、つい数時間ほど前の光景が頭をよぎる。呼び鈴を押そうとして力なく降りていった右手。擦りむいた膝から滴る赤黒い<ruby>末端熱交換液<rp>《</rp><rt>Ｔ　－　Ｈ　Ｅ　Ｌ</rt><rp>》</rp></ruby>と、何も言わないリコ。怒鳴り散らしてしまった自分と、そんなリコを置いてどこかへ行ってしまった自分。思い出すだけで内蔵がかき乱され、今にもえずきそうになる。足が震えだし、ここから逃げ出せと声高に叫ぶ。さっさと帰ろうと、もうこんなストレスはこりごりだと叫び散らす。
 （うるさい……！）
 　手のひらに爪を食い込ませ、全身からのシグナルを必死で遮断する。確かに希海は弱い。リコにごめんねと謝るただそれだけのことにここまで強い恐怖を抱いてしまうほどの弱い人間で、そのせいでずっと大学にも行けなかった。いや、それも結局は強制的に連れ戻されただけで最後まで自分一人では何ひとつできなかった。自身の愚かさは嫌というほどに自覚している。
 　だが、今回だけは別だ。自分はリコを……、あんな辛い目にあったリコに手を差し伸べるどころかひどい仕打ちで傷付けてしまった。大学なんていう希海だけの問題とはわけが違う。だから謝らなければ。ここで謝ってリコを連れて帰らなければ自分は……本当に最低な人間になってしまう。もう二度と……立ち上がれなくなってしまう。
@@ -114,7 +114,7 @@
 「それはちょうど夢の中みたいで……。一度も飛んだことがないのに、空を飛べるって何故か知っているのと同じで……」
 　まるで独り言のような、誰に向けるでもないリコの言葉。その透き通った声を受けて<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>がびくりと脈動した。少女の肩口に浮かぶ黒い六角柱。その辺の一つ一つが見る見るうちに折れ曲がり繋がってゆく。
 　まずい。
-　希海は慌てて手元に浮かべてあった植木鉢を掴み、<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけた。1000本の矢の3分の1近くを対象に作用させ、半数以上の矢で床に踏ん張りを効かせる。鉢を加速させる矢と反作用を打ち消す矢の数が同じでないのは、床と鉢で作用係数が異なるからだ。本来ならば別の何かで踏ん張りを効かせる方が効果的であるが、そんなものを探している暇があるなら一刻も早く攻撃をした方がいい。そんな判断だった。
+　希海は慌てて手元に浮かべてあった植木鉢を掴み、<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけた。千本の矢の三分の一近くを対象に作用させ、半数以上の矢で床に踏ん張りを効かせる。鉢を加速させる矢と反作用を打ち消す矢の数が同じでないのは、床と鉢で作用係数が異なるからだ。本来ならば別の何かで踏ん張りを効かせる方が効果的であるが、そんなものを探している暇があるなら一刻も早く攻撃をした方がいい。そんな判断だった。
 　希海の指を離れた植木鉢は幾百もの矢に押されて一瞬の内に加速する。だがその弾丸が目標を撃ちぬくよりほんの少しだけ早く、
 　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が光った。
 　まるで溶鉱炉のようなオレンジと赤の混ざった光。希海の網膜がその輝きを捉えたその直後、一瞬遅れてパルスのような突風が全身に叩きつけられた。
@@ -122,7 +122,7 @@
 　気付いたときには壁際まで吹き飛ばされてうずくまっていた。慌てて立ち上がった希海の目に飛び込んできたものは、相変わらず窓辺に佇む少女とその肩口で踊るように自転する真っ黒な<ruby>正四面体対称<rp>《</rp><rt>テ ト ラ ヘ ド ラ ル</rt><rp>》</rp></ruby>の立体物。角の落ちた六角柱だったはずのそれは、今や海辺の消波ブロックのような形状に変貌してしまっている。
 「……これが私の使える力です」
 　植木鉢は床に落ちて粉々に砕け散ってしまっている。一体何が起こったのか、希海にはまったく分からなかった。
-「だから……何なのよ。私だって伊達に3年間もこんなことしてたわけじゃない」
+「だから……何なのよ。私だって伊達に三年間もこんなことしてたわけじゃない」
 　吐き捨てるようにつぶやき、リコの足元に散らばった植木鉢の破片を手元に引き寄せた。破片はまるで一つ一つが命を持っているかのように別々の楕円を描き、希海の周りをくるくると周回し始める。その中には尖ったものや鋭利なものも含まれており、これを四方八方から一斉に投げつければ大抵の相手を戦闘の継続が不可能なまでに痛めつけられるだろう。
 「…………」
 　威嚇するようにリコを睨みつけると、手に汗が浮かんだ。
@@ -133,7 +133,7 @@
 　希海はそう言って一層冷たい目でリコを突き刺した。そして数秒の間、にらみ合いの時間が続き、
 　希海が突如として動いた。
 　自らの周りを周回していた植木鉢の破片をでたらめに散らばらせ、その一つ一つをリコの体に向けて飛ばす。さながら無数の隕石が天体という<ruby>重力の井戸<rp>《</rp><rt>ポテンシャルウェル</rt><rp>》</rp></ruby>に落ちていくように、破片がでたらめな軌道を描いて速度を上げた。その加速度は先ほどの比ではない。なぜなら一個の物体を投げつけるときとは違い、今回は一つ一つを異なる方向から押しているからだ。すなわち<ruby>力<rp>《</rp><rt>ベクトル</rt><rp>》</rp></ruby>の<ruby>総 和<rp>《</rp><rt>サメーション</rt><rp>》</rp></ruby>はほとんどゼロに等しく希海の体に反作用は生じない。反作用が生じなければそれを<ruby>相殺<rp>《</rp><rt>キャンセル</rt><rp>》</rp></ruby>するために使っていた矢の全てを物体の加速に費やせる。これはまさに希海の奥の手。<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>ではなく肉体を破壊することで相手を行動不能に至らしめるという、出来れば使いたくなかった禁じ手だ。
-　1000の矢のすべてからエネルギーを受けとった破片は一瞬の内に目で追い切れないほどの速度に達する。狙うは顔や喉元。もちろん本気でリコを傷付けるつもりなんてこれっぽっちもない。破片がその柔肌を切り裂く寸前のところで止めるつもりだ。そして寸止めで終わらせるからこそ、手加減をしてはならなかった。相手に恐怖を植え付け、徹底的に力の差を見せつけなければ戦意を砕くことはできない。
+　千の矢のすべてからエネルギーを受けとった破片は一瞬の内に目で追い切れないほどの速度に達する。狙うは顔や喉元。もちろん本気でリコを傷付けるつもりなんてこれっぽっちもない。破片がその柔肌を切り裂く寸前のところで止めるつもりだ。そして寸止めで終わらせるからこそ、手加減をしてはならなかった。相手に恐怖を植え付け、徹底的に力の差を見せつけなければ戦意を砕くことはできない。
 　四方八方から弾丸のような速度で向かってくる幾つもの鋭利な刃物。だがそんな渦中の人間に恐怖を与えるような光景にもリコは微動だにしない。少女はただじっとその場に立ち尽くしたまま周囲の破片をちらりと一瞥すると、
 　唇を小さく動かした。
 　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤く嘶き、リコを中心として渦を巻いた分厚い気流が生じる。その旋風が破片に触れたと思った次の瞬間、遠隔作用の手応えが消えた。
