--- a/hardproblem/5-02.html
+++ b/hardproblem/5-02.html
@@ -19,7 +19,7 @@
 　そう言いたくなる気持ちは分からないでもない。確かに元からやる気のかけらもない人間だったし、その上真面目に研究をしたところで単位は出してもらえないという教授のお墨付きだ。そんな状況でモチベーションを上げろという方が無理があると思うのだが、まあ事実は事実である。
 　だが分からないことを自分で調べろと言われ、『調べ方が分からない』と反論した後のセリフとしてこれはどうかと希海は思う。何を調べたらいいのかも分からない状況で『分からないなら調べろ』と言われても、右も左も分からない自分は途方に暮れるだけである。
 （……もう知るか）
-　舌打ちをして、パソコンの電源を落とした。調べ物は一向に解決していない。椅子に座ったまま大きく伸びをして時計を見れると、短針は13時を少し回ったあたりを指していた。どうりで腹が減るわけだ。最近はずっと朝を抜いてばっかりなので、昼を回った頃にはいつも強い空腹を覚える。
+　舌打ちをして、パソコンの電源を落とした。調べ物は一向に解決していない。椅子に座ったまま大きく伸びをして時計を見れると、短針は午後の一時を少し回ったあたりを指していた。どうりで腹が減るわけだ。最近はずっと朝を抜いてばっかりなので、昼を回った頃にはいつも強い空腹を覚える。
 （仕方ない……）
 　どうせこんな作業を続けても効率が悪いだけだ。一旦学食にでも行こう。希海はそう考えると鞄から財布だけを引っ張り出し、乱暴にケツポケットへ突っ込んで学生部屋を出た。
 　扉を開けると、無機質な白い廊下の向こうから談笑する声がこちらへ向かってくる。声の主は複数名。男が三人に女が一人。同じ研究室の人間たちだった。希海はポケットから携帯端末を取り出すと、それをわざとらしくいじりながら彼らとすれ違う。メールボックスを開き新着問い合わせのボタンを押すと、処理中を示す小さな円がくるくると画面上で回転をはじめた。もちろんメールのチェックなどしてみたところでスパム以外の何も来ていないであろうことは容易に想像がつく。だがそんな無意味な行動とて彼らと目を合わさずにすれ違うだけの時間を稼いでくれるのには十分だった。
@@ -49,7 +49,7 @@
 　ぎゃはは、という甲高い笑い声。
 「馬鹿かよ。そんなの関係ないだろ。そうじゃなくってさ、見てみろよこの動画。すげーから」
 　そう言って茶髪がパネル上の動画再生ボタンに手を伸ばすと、雑音が混じった、いかにもハンドカメラで撮りましたと言わんばかりの音声が周囲に響き渡る。
-『こんにちは。えっと……私は上海人偶機器人工学製のアンドロイド、サマリー17シリーズのレイと言います』
+『こんにちは。えっと……私は上海人偶機器人工学製のアンドロイド、サマリー１７シリーズのレイと言います』
 「え、嘘！？　マジこれロボットなの！？　やべえ。全然見分けがつかねえ」
 　ボウズ頭が驚嘆の声を上げると、それに釣られて集団の別の面々も動画の方へと注意を向ける。飛び交う感嘆と嘲笑の混じった声。
 「しかし、俺が子供の時のロボットってもっと何か不自然というか、こう会話してるところとかを見たら一発で見抜けたのにな」
@@ -66,9 +66,9 @@
 「だよなあ……。そうやって自分に自信がないからって機械に認めてもらおうっていう考えがそもそも卑屈だし、そんなんだから人間からも相手に――」
 　からん。
 　希海はレンゲを投げおくと、天津麻婆丼の最後の一口をお茶で強引に流し込み、気だるそうに席を立つ。トレイを返却口のコンベアに乗せ、食堂を出たところにある喫煙所でタバコを吹かして研究室に戻った。
-　その後30分ほど調べ物を再開してから実験室へと出向く。
-　今日の午後は<ruby>博士課程三年<rp>《</rp><rt>D　　　　　3</rt><rp>》</rp></ruby>の先輩と予備実験をすることになっている。その内容は「生体サンプルを有機結晶に付着させオルゴン場に曝露させておく」というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分を消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
-　慣れない結晶の開裂作業をイライラしながら何度もやり直し、ようやく終わらせる。次は有機結晶の浄化だ。専用の薬品に浸しながら超音波洗浄機で15分かけて表面の微細な汚れを落とすのを3周行う……という作業なのだが、この15分という時間がまた嫌らしい。本格的に調べ物や論文の執筆に充てるには短いし、かと言って何もせずただ待つには長すぎる。タバコを吸いに行こうにも二年前には確かにあったはずの喫煙所はいつの間にか失くなってしまっていたし、そもそもこの寒空の下わざわざ建物の外へ出る気にはなれなかった。
+　その後三十分ほど調べ物を再開してから実験室へと出向く。
+　今日の午後は<ruby>博士課程三年<rp>《</rp><rt>Ｄ　　　　　３</rt><rp>》</rp></ruby>の先輩と予備実験をすることになっている。その内容は『生体サンプルを有機結晶に付着させオルゴン場に曝露させておく』というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分を消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
+　慣れない結晶の開裂作業をイライラしながら何度もやり直し、ようやく終わらせる。次は有機結晶の浄化だ。専用の薬品に浸しながら超音波洗浄機で十五分かけて表面の微細な汚れを落とすのを三周行う……という作業なのだが、この十五分という時間がまた嫌らしい。本格的に調べ物や論文の執筆に充てるには短いし、かと言って何もせずただ待つには長すぎる。タバコを吸いに行こうにも二年前には確かにあったはずの喫煙所はいつの間にか失くなってしまっていたし、そもそもこの寒空の下わざわざ建物の外へ出る気にはなれなかった。
 「…………」
 　そして希海は仕方なく学生部屋のデスクでラップトップを広げ、ネットの掲示板をチェックしていた。何をするでもなく何を考えるでもなく、ただ怠惰にモニタに映し出される文字の羅列を目で追いかける。
 『おすすめのコンビニ弁当教えてくれ』
