表現を一部変更

--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -51,6 +51,7 @@
 「おいおい、お前、知らないのにそんなこと言うのは流石に失礼なんじゃ……」
 「いやさ、俺も似たような経験あるから分かるんだけどさ、ありゃ多分、単にサボり癖というか逃げ癖がついただけのパターンだと思うよ」
 「そ、そうなの……？」
+　少し戸惑った様子の竹見さんの声を尻目に、同級生の弁舌は闊達だ。
 「もしそうなら、アレだね。これからの人生結構苦労するんじゃないの？」
 「や、まあそれは青山さん自身が一番分かってるでしょ。こう、結構何かにつけて自己嫌悪とかしてるんじゃないかな」
 「ちょ、ちょっと……そういうのやめない……？」
