誤植？の修正

--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -141,7 +141,7 @@
 「わかりました。じゃあ……明後日まで……待ちます」
 　そう告げるのだった。
 「うん……そうして……もらえるかな」
-　一方の希海もそう応えるしかない。もはや前言を撤回できる雰囲気ではなく、希海は『もう仕方ない』と頭を切り替えることにした。データの解析については明日行ったときに謝り倒そう。今まで真面目に休まず出席していたのだから、一日くらいドタキャンしたっていいだろう。ましてやこれはリコに関することなのだだ。どっちが大切かなんて考えるまでもない。そう思った。
+　一方の希海もそう応えるしかない。もはや前言を撤回できる雰囲気ではなく、希海は『もう仕方ない』と頭を切り替えることにした。データの解析については明日行ったときに謝り倒そう。今まで真面目に休まず出席していたのだから、一日くらいドタキャンしたっていいだろう。ましてやこれはリコに関することなのだ。どっちが大切かなんて考えるまでもない。そう思った。
 　そして話が決まれば、あとはいつも通りの日常である。
 　とは言っても、その日常とやらは顔を洗って布団に入るだけの無味乾燥なものであるし、ましてこの日に限ってはいつも話しかけてくるリコも無言を貫いたままだ。話すこともやることもない以上、寝る準備をしてそそくさと布団に入るしかなかった。
 　希海は床に敷かれた布団の中で寝返りを打ってみる。
