誤字の訂正

--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -76,7 +76,7 @@
 「ご名答。実際にニューロワームっていう名前は、マルウェアのワームから採られてるのよ。<ruby>神経細胞<rp>《</rp><rt>ニューロン</rt><rp>》</rp></ruby>に寄生するワームってとこね」
 「ふふっ。さすが希海さん、色んなこと知ってますね」
 「ま、まあ、一応専門だし……」
-　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、スボトニック型ニューロワームの宿主共生おける突然変異だとか、強磁場中におけるヤング配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
+　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、スボトニック型ニューロワームの宿主共生における突然変異だとか、強磁場中におけるヤング配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
 「じゃあ、そのニューロワームに感染した人は、どうなるんですか？」
 「色々よ。認知能力に障害が出たり、頭がおかしくなっちゃったり。でもほとんどは閉律症ね。精神が外界から隔絶されて、眠ったままになっちゃうの。これが全体の……えーっと、９８％くらいだったかな。ちょっとうろ覚え」
 「眠ったまま？　起きないんですか？」
@@ -113,7 +113,7 @@
 「…………何の話だね？」
 「だからルーミングを」
 　東は眉をつり上げた表情で固まっている。
-「私、特定精神医療従事者の免許持ってます。二種ですけど、発症から七十二時間位内の治療なら問題はありません」
+「私、特定精神医療従事者の免許持ってます。二種ですけど、発症から七十二時間以内の治療なら問題はありません」
 　機械が内的な精神空間を有しているだなんて、にわかに信じがたいことだ。本当にそうなら、この目でそれを見てやろう。ロボットと人がどう違うのか、直接確かめてやろう。そう思った。
 　ふと隣を見ると、リコが不安そうな視線を希海によこしている。虹を閉じ込めた瞳には、好奇心と執念に燃える姿が写っていた。
 </div>
