【重要】情景の一部を変更

--- a/hardproblem/5-07.html
+++ b/hardproblem/5-07.html
@@ -89,7 +89,7 @@
 　だが携帯端末をポケットにしまい込むや否や、その小さな機械は再びけたたましい着信音を周囲に鳴り響かせる。発信者は……やはり東。りんりんと耳障りなベルの音が希海の頭をかき乱し、収まりかけていた苛立ちに油を注ぐ。
 　うるさい。
 　うるさいうるさい。
-　どうしてどいつもこいつもそうなんだ。私は一人で居たかったというのに。あの自室に、一人きりの世界に、雪の降る公園に、ずっと居たかったというのに。こんな不愉快な思いをするくらいなら同居人なんて要らなかったというのに、どうしてどいつもこいつも、自分を放っておいてくれないんだ。
+　どうしてどいつもこいつもそうなんだ。私は一人で居たかったというのに。あの自室に、一人きりの世界に、雪の降る廃工場に、ずっと居たかったというのに。こんな不愉快な思いをするくらいなら同居人なんて要らなかったというのに、どうしてどいつもこいつも、自分を放っておいてくれないんだ。
 　りんりんと不愉快な着信音、道路をゆく車のエンジン音、浜辺に打ち寄せる波、軋む心臓、耳の奥にこびりついたすすり泣く声、鳴り響くベル、鳴り止まないベル、そして
 「うるさいッ！！」
 　希海は端末を地面に叩きつけた。
