--- a/hardproblem/4-05.html
+++ b/hardproblem/4-05.html
@@ -15,10 +15,10 @@
   <div class="contents">
 <div class="text">
 　ここに一人の少女がいる。
-　しんしんと降りしきる雪の公園でたった一人膝を抱え、ただひたすらにすべてから目を逸らすように<ruby>眼<rp>《</rp><rt>まなこ</rt><rp>》</rp></ruby>を伏せた少女が。
+　ちらばる廃材や打ち捨てられた工具に囲まれ、たった一人膝を抱えてただひたすらにすべてから目を逸らすように<ruby>眼<rp>《</rp><rt>まなこ</rt><rp>》</rp></ruby>を伏せた少女が。
 （ああ、あんたは……）
-　希海はこの少女を世界で一番よく知っていた。年の頃は十五。負けん気の強そうな顔つきは毎朝鏡で見る顔とまったく変わっておらず、当時背中まで伸ばしていたくせっ毛はまだ黒いまま。
-　彼女は八年前の自分だった。中学校でいじめられ、閉律症を患ってしまったかつての自分。そして見覚えのあるこの場所は希海の精神空間だ。七号公園に似た風景も、<ruby>主<rp>《</rp><rt>あるじ</rt><rp>》</rp></ruby>を埋め尽くさん勢いで降りしきる雪も、すべてが昨日のことのように思い出すことができた。そう、あれは確か中学三年生の十二月。例年より雪が多かった冬の、どうしようもない一ヶ月間の出来事だ。
+　薄暗い夕焼けの廃工場。骨組みだけになってしまった屋根からしんしんと降り積もる雪。希海はこの少女を世界で一番よく知っていた。年の頃は十五。負けん気の強そうな顔つきは毎朝鏡で見る顔とまったく変わっておらず、当時背中まで伸ばしていたくせっ毛はまだ黒いまま。
+　彼女は八年前の自分だった。中学校でいじめられ、閉律症を患ってしまったかつての自分。そして見覚えのあるこの場所は希海の精神空間だ。子供の頃に遊び場にしていた八十八地区の廃工場も、<ruby>主<rp>《</rp><rt>あるじ</rt><rp>》</rp></ruby>を埋め尽くさん勢いで降りしきる雪も、すべてが昨日のことのように思い出すことができた。そう、あれは確か中学三年生の十二月。例年より雪が多かった冬の、どうしようもない一ヶ月間の出来事だ。
 　その頃の希海には仲の良かった親友がいた。中学校に入学してすぐに話しかけてくれて、それ以来3年間ずっと同じクラスだった大の仲良し。そんな子が、ある日いじめの被害者になってしまった。いや、『なってしまった』という言い方は幾分保身的であるのかもしれない。実際には『なっていた』だ。希海が知るずっと前からそのようなことは行われていたらしいし、夏頃を境にいつも笑顔だった親友がため息を付くことが多くなったのを記憶している。
 　そして、いじめの事実を知ったとき希海は黙っていなかった。友人を問いただしていじめの首謀者達を突き止め、その内の一人に掴みかかった。元からそういうのが嫌いな性格ももちろんあったが、何より大切な友達が辛い目にあっていたことを気付けなかった自分に苛立っていたのかもしれない。その後先生に呼ばれてこっぴどく叱られたものの、ともあれこれで親友を苛んでいたいじめは鳴りを潜めて一件落着……とはならなかった。
 　集団というものは常に贄を欲している。
