誤字の訂正

--- a/hardproblem/3-06.html
+++ b/hardproblem/3-06.html
@@ -17,7 +17,7 @@
 　煮え切らない思いで吸うタバコは不味かった。
 　希海は雨上がりの夜空に向かって煙を吐き出す。昨日から降り続いていた雨は希海たちが家へ帰る頃にはすっかりと止み、雲間からは大きな月がぽっかりと顔をのぞかせていた。
 　雨上がりの夜は冷える。地表の放射冷却を遮る雲も、大地を温める太陽もそこにはない。どこまでも黒い夜空に浮かんだ月だけが、このベランダから見える唯一の天体だ。
-　タバコを根本まで吸いきった希海は、吸殻を足元の空きビン投げ入れる。もう何年も前に設置した灰皿だ。部屋でタバコを吸うと管理人に怒られるし、最近はリコもうるさい。
+　タバコを根本まで吸いきった希海は、吸殻を足元の空きビンに投げ入れる。もう何年も前に設置した灰皿だ。部屋でタバコを吸うと管理人に怒られるし、最近はリコもうるさい。
 　窓を開けて自室に戻った。
 　ベランダから見えた街の光よりもずっと明るい白色ダイオードの光が希海を包み込む。時刻は夜の十時。風呂も夕飯もすでに済ませてある。
 「……」
