--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -84,7 +84,7 @@
 　端から答えなど期待していなかったのだろう。重々しく答える希海を鼓舞するかのように、リコは優しく微笑みかける。
 「どうして人間が私達を作ったのか……その答えは私にも分かりません。でもね、私はこう思うんです。それを知るためにはまず人間を理解しないといけないって。希海さんたち人間のことを理解すれば、いつかきっとその答えが分かるんじゃないかって」
 　リコはそう言って自らの腹部に手をかけると、柔らかな手付きで体を撫ではじめる。
-「だから“これ”もきっと、そのためにあるんです。私達が人間を理解するために。人間の心を理解するために……。誰が授けてくれたものなんです」
+「だから“これ”もきっと、そのためにあるんです。私達が人間を理解するために。人間の心を理解するために……。誰かが授けてくれたものなんです」
 　さながら乳飲み子を慈しむ母親のようだった。
 　そんな少女の姿が言いようのないほどに美しく見えて、冷たい夜風がふたりの間を駆け抜けるまでの間、希海はしばらく何も言えずにリコの横顔をただひたすらに眺めていた。
 </div>
