--- a/hardproblem/1-07.html
+++ b/hardproblem/1-07.html
@@ -48,7 +48,7 @@
 　日中英の三ヶ国語で書かれているのは、交友関係の広さの表れだろうか。この男と話していると忘れてしまうが、おそらく、かなり偉い人なのだろう。他人から名刺をもらったことのない希海は、手中の紙切れをどう扱えばいいかわからず一抹のやりにくさを感じた。確か、もらった名刺をいきなりポケットとかに入れるのはマナー違反だったはずである。
 　希海は数秒ほど悩んだ末、左手に名刺を持ったままドアを開いて外に出た。地面に足を付けて立ち上がるとそれまでの眠気が一気に引いていく。
 「それじゃあ、彼女をよろしくな」
-　男は運転席からそう告げると、車をUターンさせてさっさと行ってしまった。テールランプの赤色が次第に小さくなっていく。車が角を曲がって見えなくなっても、希海はその場に立ち尽くしていた。
+　男は運転席からそう告げると、車をＵターンさせてさっさと行ってしまった。テールランプの赤色が次第に小さくなっていく。車が角を曲がって見えなくなっても、希海はその場に立ち尽くしていた。
 　遠くに聞こえていたエンジン音が小さくなり夜の静寂に消えると、一気に日常が帰ってきた気がした。だが、ちらりと横を<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>うと、そこにはロボットの女の子。きれいに切り揃えられた黒い髪が夜風にたなびいており、希海の視線に気付くとまるで子犬のようなきょとんとした表情を見せる。
 「じゃ、じゃあとりあえず、部屋に戻ろっか」
 「はいっ」
