よく使うギリシャ語勉強サイト追加

--- a/link.html
+++ b/link.html
@@ -122,6 +122,7 @@
         <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner">コラム統計計算文法考</span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://homepage1.nifty.com/suzuri/index.htm" target="_blank"><span class="pbanner">ギリシャの箱</span></a></td>
         <td class="nobanner"><a href="http://mujina.sakura.ne.jp/history/" target="_blank"><span class="pbanner">市町村変遷パラパラ地図</span></a></td>
       </tr>
     </tbody>
