推敲漏れの訂正

--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -140,7 +140,7 @@
 「なっ……！？」
 　そしてコントロールを離れた破片は慣性という物理学上の基礎概念すら忘れてしまったかのようにその場へ落下してまう。何が起きたのかまったく理解できなかった。
 「ほら、言ったでしょう」
-　ぽとぽとと力なく落ちるいくつもの花瓶の欠片。リコはそんな破片に目もくれず、すこしだけ苦そうな顔で希海を見据える。
+　ぽとぽとと力なく落ちるいくつもの植木鉢の欠片。リコはそんな破片に目もくれず、すこしだけ苦そうな顔で希海を見据える。
 「この風はすべてを消し去ることができます。力とか夢とか心とか……そういう熱を帯びたあらゆる<ruby>灯<rp>《</rp><rt>ともしび</rt><rp>》</rp></ruby>を吹き消すことができる、そういう風なんです。だから希海さんが何をしようとも勝ち目なんて……」
 　言葉が尻すぼみになって消えていく。まるで自分の無力さを語っているかのように悲しい声色。
 「だから、諦めてください。私に帰るつもりはありませんし、希海さんが力づくで連れて帰ろうとも無理なんです」
