表記ゆれ修正

--- a/hardproblem/6-02.html
+++ b/hardproblem/6-02.html
@@ -56,7 +56,7 @@
 　ちょうど東の乗った軽自動車が角を曲がって走り去るのが見えた。
 　時すでに遅しか、いや……ある意味でこれも織り込み済みだ。希海はこの段になってコートを部屋に忘れたことに気付いたが、こうなってしまった以上もはやそんなことはどうでも良かった。どうせすぐに暖かくなる。
 　手に持った自転車の鍵を握り締めると、アパートの裏手にある駐輪場へと駆け込んだ。東が今ここを発ったばかりならばまだ勝算はある。駐輪場に停めてあった一台の赤い自転車を見つけ出し、<ruby>施錠<rp>《</rp><rt>ロック</rt><rp>》</rp></ruby>を外してスタンドを蹴った。ペダルが隣の自転車に引っかかっていたが、ちまちまと知恵の輪じみたことをする時間なんてない。今は一刻も早く東に追いつかねば。追いついて……伝えねば。
-　力任せに自転車を引っこ抜いた。右隣の黒いママチャリがガシャンと大きな音を立てて倒れ、さらにその隣に停まっていた片足スタンドのマウンテンバイクがドミノ倒しのように巻き添えを食らう。知ったことか。希海はそれに目もくれず自転車にまたがると、少し低いサドルに違和感を覚えながらペダルを蹴って夜の町へ駆け出した。変速機をがちゃがちゃと動かし、ギアを一気に６速まで上げる。ガコンというチェーンが移動する音。車軸にかかるトルクが減少し、ペダルが一気に重さを増した。希海はハンドルを握ったまま立ち上がると、まるで<ruby>鞴<rp>《</rp><rt>ふいご</rt><rp>》</rp></ruby>を踏むかのように力を込めて足を動かす。
+　力任せに自転車を引っこ抜いた。右隣の黒いママチャリがガシャンと大きな音を立てて倒れ、さらにその隣に停まっていた片足スタンドのマウンテンバイクがドミノ倒しのように巻き添えを食らう。知ったことか。希海はそれに目もくれず自転車にまたがると、少し低いサドルに違和感を覚えながらペダルを蹴って夜の町へ駆け出した。変速機をがちゃがちゃと動かし、ギアを一気に六速まで上げる。ガコンというチェーンが移動する音。車軸にかかるトルクが減少し、ペダルが一気に重さを増した。希海はハンドルを握ったまま立ち上がると、まるで<ruby>鞴<rp>《</rp><rt>ふいご</rt><rp>》</rp></ruby>を踏むかのように力を込めて足を動かす。
 　住宅街の下り坂を無灯火で滑走し、その勢いのままにセンターラインのある片側一車線の道路へと突入する。朝夕の時間帯ならまだしも、深夜の住宅街に車は少なく、ただまっすぐな道に点々と信号機の光が灯っているだけだ。そして、そんな信号機の赤い光をいくつも無視した先にあった交差点に、見覚えのあるシルバーの軽が停まっていた。
 　追いついた。だが、そう喜ぶのも束の間だった。
 　自動車の流れをせき止めていた信号が青に変わり、車の列は先頭から順にゆっくりと動き出してしまう。一台目のトラックは右折。二台目のバンは直進。そして三台目に位置していた東の軽は……右折。
