誤字の訂正

--- a/hardproblem/6-02.html
+++ b/hardproblem/6-02.html
@@ -107,7 +107,7 @@
 「ざっけんじゃないわよ！！」
 　希海が叫んだ。赤くなった目で東を睨みつけ、殴りかからんばかりの勢いで啖呵を切りはじめる。負けられなかった。たとえ負けたとしても絶対に退けなかった。
 「あんたらの都合であの子を作って、私の勝手であの子を傷付けて、それで使えなくなったらポイと捨てるっていうの！？　捨てろっていうの！？　何よそれ！　そんな物みたいにリコを扱えっていうの！？　人間を作りたいって言ったのは……つッ！　……どこのどいつよ！」
-　肩に激痛が走る。ひとしきり言い切ったところで、希海はその場にうずくまっていまう。だめだ、まだ終わっていない。こいつの答えを聞いて一発ぶん殴ってやらないと気が済まない。そう自らに言い聞かせるも、肩の痛みはじんじんとその場を右往左往するだけで一向に消えてはくれなかった。
+　肩に激痛が走る。ひとしきり言い切ったところで、希海はその場にうずくまってしまう。だめだ、まだ終わっていない。こいつの答えを聞いて一発ぶん殴ってやらないと気が済まない。そう自らに言い聞かせるも、肩の痛みはじんじんとその場を右往左往するだけで一向に消えてはくれなかった。
 　背後からクラクション。
 　けたたましい響きが、その場で沈黙していた二人の間に割って入った。ガラの悪い黒塗りのバンがうっとしそうに二人の横を通り過ぎていく。鼻につく排気ガスの匂いと周囲を威嚇するようなエンジンの残響。東は何かを思い出したように自らの車へと向き直ると、おもむろに後部座席のドアを開いた。
 「乗りたまえ。とりあえず病院に行こう」
