文学フリ大阪追加

--- a/link.html
+++ b/link.html
@@ -33,6 +33,7 @@
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
 　　　　　</tr>
       <tr>
+       　<td class="nobanner"><a href="http://osakabunfree.com/" target="_blank"><span class="pbanner">文学フリマ大阪</span></a></td>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
 　　　　　</tr>
     </tbody>
