細かな表現の修正

--- a/hardproblem/5-05.html
+++ b/hardproblem/5-05.html
@@ -33,7 +33,7 @@
 　リコの過去。かつての主人からもらった名前はハルカ。前の主人を自殺で亡くし、その後を追うように息を引き取った……。少女のことは色々と知っているつもりだったが、こうして列挙してみると、あらためて自分が何も知らなかったことに気付く。ハルカと主人の間に何があったのか、主人が死んでからハルカは――リコは一体何をしていたのか。
 　息苦しさが希海を襲う。その感情の正体は……多分、醜い嫉妬と独占欲なのだろう。リコの過去すらもすべて手中に収め、把握していないと気が済まない。そんな口に出すのも憚られるほど汚らしい情念。そしてそれが分かっていたからこそ希海は今に至るまでリコを強く問いただせないでいた。
 （…………暑い）
-　背中がうっすらと汗ばみ、顔が火照っている。空調が効きすぎだ。ちょうと湊川区を抜け、車内の人もまばらになってきた頃である。目的の<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>駅まではもう大して時間もないが、せっかく人が少なくなってきたのだからコートを脱いでしまおう。そう思った希海はおもむろにその場から立ち上がり、上着のボタンを外し始める。そして左腕を袖に通しながらリコの方を窺うと、
+　背中がうっすらと汗ばみ、顔が火照っている。空調が効きすぎだ。ちょうと降車客の多い西駅を過ぎ、車内の人もまばらになってきた頃である。目的の<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>駅まではもう大して時間もないが、せっかく人が少なくなってきたのだからコートを脱いでしまおう。そう思った希海はおもむろにその場から立ち上がり、上着のボタンを外し始める。そして左腕を袖に通しながらリコの方を窺うと、
 　目が合った。
 　少女は相変わらず遠い目でコートを脱ごうとする希海をじっと見つめている。
 　――何をやってるんですか？
