--- a/picture/nozomiriko01.html
+++ b/picture/nozomiriko01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>nozomi09</title>
+  <title>nozomiriko01</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
