誤字の訂正

--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -99,7 +99,7 @@
 　内蔵がじわじわと押し潰されていく。自分でも、もう何を言っているのか分からなかった。
 「じゃあそんなことを言う希海さんは……。一体何をしてくれるんですか……」
 　押し殺したようなリコの声色はまるで刃物のように鋭く、希海をじわじわと切り刻んでいく。
-「希海さんは、真也さんを生き返らせてるんですか？　私の過ちをなかったことにしてくれるんですか？　私の重荷を今ここで……消し去ってくれるんですか？」
+「希海さんは、真也さんを生き返らせてくれるんですか？　私の過ちをなかったことにしてくれるんですか？　私の重荷を今ここで……消し去ってくれるんですか？」
 　希海は答えない。答えられない。そしてその沈黙こそが、希海が無力であることの証明に他ならなかった。
 「……ですよね。私だって分かってます。無茶なこと言ってるって。そのことで希海さんを責めるなんてお門違いだって。でもだからこそ……無責任なこと言わないでください。気にするなとか……いつか良くなるとか……。私を取り囲む問題から目を逸らしたいがために、そんな勝手なこと言わないでください」
 「な、何よそれ！　私はリコのことが心配で！」
