タイトル絵変える準備

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -25,7 +25,7 @@
   <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
-<body id="page">
+<body id="page" style="background-color:#FFFFFF;">
   <div v-component="hpot-main-header"></div>
 
   <div id="main-contents" class="contents">
