--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -29,7 +29,7 @@
   <div v-component="hpot-main-header"></div>
 
   <div id="main-contents" class="contents">
-    <img class="hpot-cover" src="../img/title1.png" />
+    <img class="hpot-cover" id="cover" src="../img/title1.png"/>
     <div id="main-hpot-index" v-component="hpot-index"></div>
   </div>
 </body>
@@ -39,3 +39,4 @@
 <script src="../vendor/vue.min.js"></script>
 <script src="components.js"></script>
 <script src="page.js"></script>
+<script src="cookie.js"></script>
