--- a/hardproblem/3-08.html
+++ b/hardproblem/3-08.html
@@ -28,6 +28,12 @@
 </body>
 </html>
 
+<script type="text/javascript">
+<!--
+document.cookie="hpftflag=hpftflag3";
+//-->
+</script>
+
 <script src="config.js"></script>
 <script src="../vendor/vue.min.js"></script>
 <script src="components.js"></script>
