--- a/hardproblem/7.html
+++ b/hardproblem/7.html
@@ -83,6 +83,12 @@
 </body>
 </html>
 
+<script type="text/javascript">
+<!--
+document.cookie="hpftflag=hpftflag7";
+//-->
+</script>
+
 <script src="config.js"></script>
 <script src="../vendor/vue.min.js"></script>
 <script src="components.js"></script>
