クッキーの寿命を半年に

--- a/hardproblem/7.html
+++ b/hardproblem/7.html
@@ -85,7 +85,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag7";
+document.cookie="hpftflag=hpftflag7;max-age=15552000";
 //-->
 </script>
 
