--- a/hardproblem/3-08.html
+++ b/hardproblem/3-08.html
@@ -30,7 +30,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag3";
+document.cookie="hpftflag=hpftflag3;max-age=15552000";
 //-->
 </script>
 
