後半ページを開いたら表紙が変わる仕様へ

--- a/hardproblem/6-03.html
+++ b/hardproblem/6-03.html
@@ -104,6 +104,12 @@
 </body>
 </html>
 
+<script type="text/javascript">
+<!--
+document.cookie="hpftflag=hpftflag3;max-age=15552000";
+//-->
+</script>
+
 <script src="config.js"></script>
 <script src="../vendor/vue.min.js"></script>
 <script src="components.js"></script>
