--- a/link.html
+++ b/link.html
@@ -14,7 +14,7 @@
   </div>
   
   
-  <div class="link_category">小説</div>
+  <div class="link_category">文芸・小説</div>
   <table class="link">
     <tbody>
       <tr>
@@ -23,29 +23,33 @@
         <td class="nobanner"><a href="http://fairytale.github.io/abstr/" target="_blank"><span class="pbanner">λ abstraction</span></a></td>
       </tr>
       <tr>
-        <td class="nobanner"><a href="http://estar.jp/.pc/user/U2FsdGVkX18xXOTc5MDkyNvuxPNonyBdZbNbCF4wVGRgA1/%E3%83%93%E3%83%83%E3%82%AF%E3%83%AA%E7%AE%B1" target="_blank"><span class="pbanner">ビックリ箱／エブリスタ</span></a></td>
+        <td class="nobanner"><a href="http://estar.jp/.pc/user/U2FsdGVkX18xXOTc5MDkyNvuxPNonyBdZbNbCF4wVGRgA1/%E3%83%93%E3%83%83%E3%82%AF%E3%83%AA%E7%AE%B1" target="_blank"><span class="pbanner">ビックリ箱</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
 　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">　梟　流　</span></a></td>
       </tr>
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://amekura10.tumblr.com/" target="_blank"><span class="pbanner">全年齢向け文章置き場</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://ncode.syosetu.com/n2111bv/" target="_blank"><span class="pbanner">ナイトスプリンター</span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
-        <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
 　　　　　</tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="http://ncode.syosetu.com/n0742cc/" target="_blank"><span class="pbanner">通り過ぎる100のエッセイ</span></a></td>
+        <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
        　<td class="nobanner"><a href="http://osakabunfree.com/" target="_blank"><span class="pbanner">文学フリマ大阪</span></a></td>
-        <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
 　　　　　</tr>
+      <tr>
+        <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
+      </tr>
     </tbody>
   </table>
-  
+
+
   <div class="link_category">漫画・イラスト</div>
   <table class="link">
     <tbody>
       <tr>
-
         <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
-        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコSDT／pixiv</span></a></td>
+        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコSDT</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
       </tr>
       <tr>
@@ -54,9 +58,12 @@
         <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
       </tr>
       <tr>
-　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢／Twitter</span></a></td>
-　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇ／pixiv</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇ</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
+      </tr>
+      <tr>
+        <td class="banner"><a href="http://ugf.nengu.jp/index.html" target="_blank"><img src="banner/banner11.jpg"></a></td>
       </tr>
     </tbody>
   </table>
@@ -67,7 +74,7 @@
       <tr>
         <td class="banner"><a href="http://www.naveuna.jp/" target="_blank"><img src="banner/navebn.png"></a></td>
         <td class="nobanner"><a href="http://kiiichi.blog.shinobi.jp/" target="_blank"><span class="pbanner">制作メモ</span></a></td>
-        <td></td>
+        <td class="nobanner"><a href="http://commmons.com/index.html" target="_blank"><span class="pbanner">commmons</span></a></td>
       </tr>
     </tbody>
   </table>
@@ -93,7 +100,10 @@
       </tr>
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://hayate2255.wordpress.com/" target="_blank"><span class="pbanner">小さいモノは美しい</span></a></td>
 　　　　　　　<td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+      </tr>
+      <tr>
         <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
       </tr>
     </tbody>
@@ -104,7 +114,7 @@
     <tbody>
       <tr>
         <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
-        <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
+        <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span style="font-size:90%;">サイレントマジョリティック窒息死</span></span></a></td>
         <td class="nobanner"><a href="http://kiiiichi.sakura.ne.jp/yoake.html" target="_blank"><span class="pbanner">夜明けの口笛吹き</span></a></td>
       </tr>
     </tbody>
