§4扉絵、手直し

--- a/picture.html
+++ b/picture.html
@@ -18,7 +18,7 @@
   </div>
   
   <table class="picture">
-    <caption>らくがき（えっちいのアリ）</caption>
+    <caption>らくがき</caption>
     <tbody>
       <tr>
         <td><a href="picture/nozomiriko02.html"><img src="thumbnail/tn_nozomiriko02.jpg"></a></td>
