--- a/picture/nozomi08.html
+++ b/picture/nozomi08.html
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <a href="nozomi08_.html"><img src="image/nozomi08.png" alt=""></a>
+    <img src="image/nozomi08.png" alt="">
   </div>
   
   <div class="picturetitle">
