タグ等の修正

--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
-<div class="logo hpot-sect1-logo">
+<div class="logo hpft-sect1-logo">
   <img src="../img/section1.png" />
 </div>
 
@@ -45,7 +45,7 @@
 　希海が大学に行かなくなったのは、ちょうど去年の今頃だった。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
