--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -130,7 +130,7 @@
 　東がＧＰＳの位置情報を頼りにたどり着いたのは三階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、一階は無人、二階には四十代の中年男性、三階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
