--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
-    <div class="logo hpot-sect2-logo">
+    <div class="logo hpft-sect2-logo">
       <img src="../img/section2.png" />
     </div>
 
@@ -70,7 +70,7 @@
 「よしっ、今日は出掛けるわよ！」
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
