--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -185,7 +185,7 @@
 　絶対に見つけ出してやるから覚えていろ。タバコとライターを手に取ると、希海はしぶしぶ部屋を後にした。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
