--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -118,7 +118,7 @@
 　ふと隣を見ると、リコが不安そうな視線を希海によこしている。虹を閉じ込めた瞳には、好奇心と執念に燃える姿が写っていた。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
