--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -89,7 +89,7 @@
 　そんな少女の姿が言いようのないほどに美しく見えて、冷たい夜風がふたりの間を駆け抜けるまでの間、希海はしばらく何も言えずにリコの横顔をただひたすらに眺めていた。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
