--- a/hardproblem/4-01.html
+++ b/hardproblem/4-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
-<div class="logo hpot-sect4-logo">
+<div class="logo hpft-sect4-logo">
   <img src="../img/section4.png" />
 </div>
 
@@ -53,7 +53,7 @@
 　ところで、なぜふたりはこんなものを身に着けているのだろうか。その答えを知るには、小一時間ほど時を遡る必要がある。それは夕方のことだ。夕方――すなわち本日十二月二十四日クリスマス・イブの午後五時前である。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
