--- a/hardproblem/4-04.html
+++ b/hardproblem/4-04.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -77,7 +77,7 @@
 　腫れたまぶたを開いて見てみると、ちらちらと舞い降りる白い雪が見えた。そういえば今日は雪が降ると言っていた。このまま地べたに寝っ転がっていると、風邪を引くくらいじゃ済まなくなるかもしれない。そんな考えが頭を過ったが、立ち上がろうとする気は一向に起きなかった。何もせず、ただひたすらに夜空を眺めていると、不意にその銀雲が途切れる。隙間から覗くのは、星ひとつない真っ黒な闇。一切の熱を吸い取ってなおその<ruby>輻射<rp>《</rp><rt>いろ</rt><rp>》</rp></ruby>を変えようとしない宇宙の黒だった。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
