--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -153,7 +153,7 @@
 　小さな声で呼びかけてみるがリコからの返答が返ってくることはない。ベッドの上で、微かな寝息にあわせて上下する肩。もう何ヶ月もこうして布団を並べて寝たというのに、今だけはその背中がとてつもなく遠くに見えた。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
