--- a/hardproblem/6-03.html
+++ b/hardproblem/6-03.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -99,7 +99,7 @@
 　扉を閉めると、そんなセリフが口からこぼれた。東には感謝しているが、ふたりで帰ってくるという約束が果たせる見込みはどこにもないのだ。リコを助けたい。その気持ちに嘘はない。だが、果たしてどうすればあの子を助けることができるのか。その筋書きがまったくと言っていいほど浮かばなかった。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
