--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -25,11 +25,11 @@
   <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
 </head>
 <body id="page" class="index">
-  <div v-component="hpot-main-header"></div>
+  <div v-component="hpft-main-header"></div>
 
   <div id="main-contents" class="contents">
-    <img class="hpot-cover" id="cover" src="../img/title0.png"/>
-    <div id="main-hpot-index" v-component="hpot-index"></div>
+    <img class="hpft-cover" id="cover" src="../img/title0.png"/>
+    <div id="main-hpft-index" v-component="hpft-index"></div>
   </div>
 </body>
 </html>
