--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -127,7 +127,7 @@
 　今にもかすれて消えてしまいそうな動作。それは機械に憧れるひ弱な人間の、吹けば飛んでしまうような矜持の表れだった。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
