--- a/hardproblem/3-01.html
+++ b/hardproblem/3-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
-<div class="logo hpot-sect3-logo">
+<div class="logo hpft-sect3-logo">
   <img src="../img/section3.png" />
 </div>
 
@@ -143,7 +143,7 @@
 　そのまま嫌がるリコの足を強引に開け、そして――
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
