--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -191,7 +191,7 @@
 　背中で感じたリコの視線は、そんな風に告げていた気がする。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
