--- a/hardproblem/5-01.html
+++ b/hardproblem/5-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 <div class="contents">
 
-<div class="logo hpot-sect5-logo">
+<div class="logo hpft-sect5-logo">
   <img src="../img/section5.png" />
 </div>
 
@@ -40,7 +40,7 @@
 　小さな部屋で誰かを待っていたのは、これが初めてではないということに。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
