--- a/hardproblem/6-01.html
+++ b/hardproblem/6-01.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
   <div class="contents">
 
-<div class="logo hpot-sect6-logo">
+<div class="logo hpft-sect6-logo">
   <img src="../img/section6.png" />
 </div>
 
@@ -127,7 +127,7 @@
 　ただそれだけだった。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
