--- a/hardproblem/acknowledgements.html
+++ b/hardproblem/acknowledgements.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -19,7 +19,7 @@
 　みんなが居なかったら、自分はとっくの昔にフェードアウトして今ごろ無力感に打ちひしがれていたことでしょう。感謝しようと思ってもしきれません。あなたたち一人ひとりが自分にとってのリコです。
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
