--- a/hardproblem/postscript.html
+++ b/hardproblem/postscript.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
-  <div v-component="hpot-page-header"></div>
+  <div v-component="hpft-page-header"></div>
 
   <div class="contents">
 <div class="text">
@@ -36,7 +36,7 @@
 <p style="text-align:right; margin-top:2em; margin-bottom:-3em; margin-right:2em;font-size:large;">2015.02.06　南正太郎</p>
 </div>
 
-    <div id="footer" v-component="hpot-page-footer"></div>
+    <div id="footer" v-component="hpft-page-footer"></div>
   </div>
 </body>
 </html>
