表現の修正

--- a/metastable3/0.html
+++ b/metastable3/0.html
@@ -38,7 +38,7 @@
 　そっと目を伏せる。
 　まぶたを閉じ、視界が闇の底に沈んでも、さっきまで見ていた真っ赤な夕焼けの空とそれに照らされた灰色の墓石は今も私の頭のなかを駆けまわっている。鼠色の墓碑に見たこともない文字で刻まれた私の名と、その前に立ち尽くす自分。死んだはずの自分と、それでも生きてる自分。
 　そうだ。私はあの日、死んでしまったのだ。死んでしまって、でもなぜか墓から出てきてしまって、そして呆然と自らの墓石の前で呆然と立ち尽くしているのだ。
-　まるで<ruby>生きる屍<rp>《</rp><rt>ゾ　ン　ビ</rt><rp>》</rp></ruby>だった。そして死体が痛みなど感じないのと同じように、あの日、あんなに痛くて消し去りたかった胸の痛みはもはや何処かへ消え去ってしまっている。今の私には、ただひとつ残った体を支えながら考えることをやめて立ち尽くすことしかできない。ならば――
+　まるで<ruby>生きる屍<rp>《</rp><rt>ゾ　ン　ビ</rt><rp>》</rp></ruby>だった。死体が痛みなど感じないのと同じように、あの日、あんなに消し去りたかった胸の痛みはもはや何処かへ飛んでいってしまっている。そして今の私には、ただひとつ残った体を支えながら考えることをやめて立ち尽くすことしかできない。ならば――
 「わかった。もどる」
 　ならば、元いた場所に戻ろう。どうせ私は死ねなかったのだ。こうして立ち尽くすだけなら、それがどこであっても同じこと。
 　私は目を開き、髪を踊らせながらくるりと背後を振り返った。
