--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -51,9 +51,9 @@
 　あまりの唐突さに、それが背後からなされた不意打ちの膝かっくんであると気付くまで少し時間を要してしまう。
 「って紀佳、何やってんだよ！　お、俺は真面目な話を――」
 「信号変わった」
-　紀佳はそう言って目の前の信号機を指さすと、藤白を置いてそそくさと横断歩道を渡り始める。
+　紀佳は藤白の剣幕などどこ吹く風といった様子で目の前の信号機を指さすと、一人そそくさと横断歩道を渡り始める。
 「ただでさえ時間あぶないのに、悠長にそんな話してる時間ないでしょ。ほら、早く行こう」
-　そして十分ほど歩いた先。団地と戸建住宅が立ち並ぶ真揺ニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増える。みなこの学校の生徒だ。誰もが早足になのは今が始業前だからだろうか。
+　そして十分ほど歩いた先。団地と戸建住宅が立ち並ぶ真揺ニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増える。みなこの学校の生徒だ。誰もが早足なのは今が始業前だからだろうか。
 「じゃあ、私はこっちだから」
 　そう告げた紀佳と下足箱の前で別れる。紀佳は今年から三年、藤白は今年から二年だ。
 　そう紀佳は藤白よりもひとつ年上である。向かいの団地に住んでいて、小学生の頃からよく一緒に遊んでいたのでときどき忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人にいつまでも朝起こしに来てもらうわけにはいかない、と藤白は思う。
